Fix page content overflow problem in some cases

--- a/client/modules/treo-core/css/treo/treo-classic-theme.css
+++ b/client/modules/treo-core/css/treo/treo-classic-theme.css
@@ -19606,14 +19606,7 @@ body > .content {
     width: 100%;
 }
 
-#content > #main:has(> main) {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: stretch;
-}
-
 #main > main {
-    flex: 1;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -20289,7 +20282,6 @@ button.category:focus {
 @media screen and (min-width: 768px) and (max-width: 1199px) {
     #main .catalog-tree-panel {
         padding: 0 10px 10px 10px;
-        float: none;
         min-height: 53px;
     }
 
@@ -21030,6 +21022,7 @@ button.category:focus {
         z-index: 1000;
         bottom: 0;
         left: 0;
+        width: 100% !important;
     }
 
     #main .catalog-tree-panel.catalog-tree-panel-hidden {
